<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/homelist"
    android:background="#2196F3"
    tools:context=".Home">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerListId"
        android:layout_width="match_parent"
        android:layout_height="match_parent"


        android:layout_marginTop="0dp"
        android:layout_marginBottom="2dp" />

    <RelativeLayout
        android:id="@+id/bottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="300dp"
        android:layout_marginBottom="20dp"
        android:background="#0003DAC5"
        android:orientation="horizontal">

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/addDataId"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_gravity="end|bottom"
            android:src="@drawable/add"
            app:maxImageSize="40dp"
            android:backgroundTint="#B8B8B8"
            android:contentDescription="@string/submit"
            android:layout_margin="16dp" />


    </RelativeLayout>

</RelativeLayout>