<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/splashScreen"
    android:background="@color/white"
    tools:context=".MainActivty">

    <pl.droidsonroids.gif.GifImageView
        android:id="@+id/splashScreenImg"
        android:layout_width="match_parent"
        android:layout_height="304dp"
        android:layout_marginTop="100dp"
        android:src="@drawable/heartrate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="Cardi Doctor"
        android:textAlignment="center"

        android:textColor="#5936F4"
        android:textSize="70sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/splashScreenImg" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="413dp"
        android:layout_height="56dp"
        android:layout_marginTop="24dp"
        android:text="Created by \n Nakib(1907086) and Shovon (1907088)"
        android:textAlignment="center"
        android:textColor="@color/teal_700"
        android:textSize="19sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />


</androidx.constraintlayout.widget.ConstraintLayout>