<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/editData"
    tools:context=".EditActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/teal_700">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="30dp"
            android:textColor="#FEFFFF"
            android:text="Update Information"
            android:gravity="center"
            android:layout_marginTop="20dp">
        </TextView>
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="80dp"
            app:cardCornerRadius="20dp">
            <LinearLayout
                android:paddingTop="20dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <EditText
                    android:id="@+id/heartRateAddId"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:layout_marginBottom="30dp"
                    android:hint="Enter heart rate"
                    android:textColor="@color/black" />

                <EditText
                    android:id="@+id/systolicPressureAddId"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:layout_marginBottom="30dp"
                    android:hint="Enter systolic Pressure"
                    android:textColor="@color/black" />

                <EditText
                    android:id="@+id/diastolicPressureAddId"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:layout_marginBottom="30dp"
                    android:hint="Enter diastolic Pressure"
                    android:textColor="@color/black" />

                <EditText
                    android:id="@+id/commentAddId"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:layout_marginBottom="30dp"
                    android:hint="Add comment"
                    android:textColor="@color/black" />


                <Button
                    android:id="@+id/addButtonId"
                    android:layout_width="106dp"
                    android:layout_height="45dp"
                    android:layout_gravity="center"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:layout_marginBottom="30dp"
                    android:background="@drawable/round_btn"
                    android:text="Update Data"
                    android:textColor="#C6C6C6" />

            </LinearLayout>
        </androidx.cardview.widget.CardView>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>